--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.5",
     "axios": "^0.21.0",
     "next": "^10.0.3",
     "next-images": "^1.6.2",
