--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,14 @@
 {
   "presets": [
-    "next/babel"
+    "next/babel",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
+    ]
   ],
   "plugins": [
     [
