--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.12.10",
     "@types/styled-components": "^5.1.5",
     "axios": "^0.21.0",
+    "cookie": "^0.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "kakaojs": "^1.2.0",
+    "mongoose": "^5.11.8",
     "next": "^10.0.3",
     "next-images": "^1.6.2",
+    "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-kakao-login": "^2.0.2",
     "styled-components": "^5.2.1",
     "swr": "^0.3.9"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.10",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "babel-plugin-styled-components": "^1.12.0",
